ISIS-872: various minor stabilization bug fixes or cosmetic fix.
1. workaround for scrollbars showing up in action modal dialog in Chrome
2. PageAbstract, make the applicaton name theme resilient to non-valid characters in the application name
3. in publishing support class, allow for a null arg for published actions.

--- a/component/viewer/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/PageAbstract.css
+++ b/component/viewer/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/PageAbstract.css
@@ -754,7 +754,7 @@ div.select2-drop {
 }
 
 .actionPanel .myBlockContainer {
-    margin:20px;
+    margin:19px;
     padding: 20px;
     width: 600px;
     min-height: 200px;
